xml_schema (0.1.2)

  * fix for comparing URIs ending in "/"

xml_schema (0.1.1)

  * NS.add to add custom namespaces
  * added a few common namespaces

xml_schema (0.1.0)

  * XmlSchema.datatype_of returns URI, not String
  * XmlSchema.to_s returns the URI string without trailing "#"
  * XmlSchema.uri (and "[]" accessor, e.g. NS::OWL["hello"]) return an instance of URI