@@ -1,3 +1,3 @@
 module XmlSchema
-  VERSION = "0.1.3"
+  VERSION = "0.2.0"
 end
